--- a/HorseBase/Views/Shared/_Layout.cshtml
+++ b/HorseBase/Views/Shared/_Layout.cshtml
@@ -36,6 +36,10 @@
             @RenderBody()
         </main>
     </div>
+    <div class="horse-container">
+    </div>
+    <script src="/js/script.js"></script>
+
 
     <footer class="border-top footer text-muted">
         <div class="container">
