--- a/HorseBase/Views/Horse/Create.cshtml
+++ b/HorseBase/Views/Horse/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HorseBase.Data.Horse
+﻿@model Horse
 
 @{
     ViewData["Title"] = "Create";
@@ -27,10 +27,18 @@
                 <span asp-validation-for="BirhtYear" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" />
+                <label class="control-label">Gender</label>
+                <div>
+                    <label>
+                        <input type="radio" asp-for="Gender" value="Male" /> Male
+                    </label>
+                    <label>
+                        <input type="radio" asp-for="Gender" value="Female" /> Female
+                    </label>
+                </div>
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Height" class="control-label"></label>
                 <input asp-for="Height" class="form-control" />
