--- a/HorseBase/Views/Horse/Details.cshtml
+++ b/HorseBase/Views/Horse/Details.cshtml
@@ -56,5 +56,7 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to List</a> |
+    <a asp-controller="Reservation" asp-action="Create" asp-route-horseId="@Model?.Id" class="btn btn-primary">Reserve</a>
 </div>
+
