--- a/HorseBase/Views/Horse/Create.cshtml
+++ b/HorseBase/Views/Horse/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Horse
+﻿@model HorseBase.Models.Horse
 
 @{
     ViewData["Title"] = "Create";
@@ -10,22 +10,27 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <!-- Form to submit data, enctype="multipart/form-data" to allow file uploads -->
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="Number" class="control-label"></label>
                 <input asp-for="Number" class="form-control" />
                 <span asp-validation-for="Number" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="BreedId" class="control-label"></label>
-                <select asp-for="BreedId" class ="form-control" asp-items="ViewBag.BreedId"></select>
+                <select asp-for="BreedId" class="form-control" asp-items="ViewBag.BreedId"></select>
             </div>
+
             <div class="form-group">
                 <label asp-for="BirhtYear" class="control-label"></label>
                 <input asp-for="BirhtYear" class="form-control" />
                 <span asp-validation-for="BirhtYear" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label class="control-label">Gender</label>
                 <div>
@@ -44,16 +49,20 @@
                 <input asp-for="Height" class="form-control" />
                 <span asp-validation-for="Height" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
+
+            <!-- File input field for photos -->
             <div class="form-group">
                 <label asp-for="PhotoPath" class="control-label"></label>
-                <input asp-for="PhotoPath" class="form-control" />
+                <input type="file" name="photos" multiple class="form-control" />
                 <span asp-validation-for="PhotoPath" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -66,5 +75,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
